# sc2-uqm

sc2/: meson.build
sc2/content/base/cutscene/credits/: credits.txt
sc2/src/abxadec/: abxaud.c
sc2/src/libs/network/socket/: socket_bsd.h
