project('uqm', 'c')

dependencies = [
  dependency('libmikmod'),
  dependency('libpng'),
  dependency('sdl2'),
  dependency('vorbisfile'),
  dependency('zlib'),
]

compiler = meson.get_compiler('c')

conf_data = configuration_data()
conf_data.set('CONTENTDIR', get_option('prefix')/get_option('datadir')/'uqm')

defines = {
  'WORDS_BIGENDIAN': host_machine.endian() == 'big',
  'HAVE_READDIR_R': compiler.has_function('readdir_r', prefix : '#include <dirent.h>'),
  'HAVE_SETENV': compiler.has_function('setenv', prefix : '#include <stdlib.h>'),
  'HAVE_STRUPR': compiler.has_function('strupr', prefix : '#include <string.h>'),
  'HAVE_STRCASECMP_UQM': compiler.has_function('strcasecmp', prefix : '#include <strings.h>'),
  'HAVE_STRICMP': compiler.has_function('stricmp', prefix : '#include <string.h>'),
  'HAVE_GETOPT_LONG': compiler.has_function('getopt_long', prefix : '#include <getopt.h>'),
  'HAVE_ISWGRAPH': compiler.has_function('iswgraph', prefix : '#include <wctype.h>'),
  'HAVE_WCHAR_T': compiler.has_type('wchar_t', prefix : '#include <stddef.h>'),
  'HAVE_WINT_T': compiler.has_type('wint_t', prefix : '#include <wchar.h>'),
  'HAVE__BOOL': compiler.has_type('_Bool'),
}
foreach define, flag : defines
  if flag
    conf_data.set(define, '#define '+define)
  else
    conf_data.set(define, '#undef '+define)
  endif
endforeach

configure_file(
  input : 'src/config_unix.h.in',
  output : 'config_unix.h',
  configuration : conf_data)

sources = [
  'src/abxadec/abxaud.c',
  'src/getopt/getopt.c',
  'src/getopt/getopt1.c',
  'src/libs/callback/alarm.c',
  'src/libs/callback/async.c',
  'src/libs/callback/callback.c',
  'src/libs/decomp/lzdecode.c',
  'src/libs/decomp/lzencode.c',
  'src/libs/decomp/update.c',
  'src/libs/file/dirs.c',
  'src/libs/file/files.c',
  'src/libs/file/temp.c',
  'src/libs/graphics/bbox.c',
  'src/libs/graphics/boxint.c',
  'src/libs/graphics/clipline.c',
  'src/libs/graphics/cmap.c',
  'src/libs/graphics/context.c',
  'src/libs/graphics/dcqueue.c',
  'src/libs/graphics/drawable.c',
  'src/libs/graphics/filegfx.c',
  'src/libs/graphics/font.c',
  'src/libs/graphics/frame.c',
  'src/libs/graphics/gfx_common.c',
  'src/libs/graphics/gfxload.c',
  'src/libs/graphics/intersec.c',
  'src/libs/graphics/loaddisp.c',
  'src/libs/graphics/pixmap.c',
  'src/libs/graphics/resgfx.c',
  'src/libs/graphics/sdl/2xscalers.c',
  'src/libs/graphics/sdl/2xscalers_3dnow.c',
  'src/libs/graphics/sdl/2xscalers_mmx.c',
  'src/libs/graphics/sdl/2xscalers_sse.c',
  'src/libs/graphics/sdl/biadv2x.c',
  'src/libs/graphics/sdl/bilinear2x.c',
  'src/libs/graphics/sdl/canvas.c',
  'src/libs/graphics/sdl/hq2x.c',
  'src/libs/graphics/sdl/nearest2x.c',
  'src/libs/graphics/sdl/opengl.c',
  'src/libs/graphics/sdl/palette.c',
  'src/libs/graphics/sdl/png2sdl.c',
  'src/libs/graphics/sdl/primitives.c',
  'src/libs/graphics/sdl/pure.c',
  'src/libs/graphics/sdl/rotozoom.c',
  'src/libs/graphics/sdl/scalers.c',
  'src/libs/graphics/sdl/sdl1_common.c',
  'src/libs/graphics/sdl/sdl2_common.c',
  'src/libs/graphics/sdl/sdl2_pure.c',
  'src/libs/graphics/sdl/sdl_common.c',
  'src/libs/graphics/sdl/sdluio.c',
  'src/libs/graphics/sdl/triscan2x.c',
  'src/libs/graphics/tfb_draw.c',
  'src/libs/graphics/tfb_prim.c',
  'src/libs/graphics/widgets.c',
  'src/libs/heap/heap.c',
  'src/libs/input/input_common.c',
  'src/libs/input/sdl/input.c',
  'src/libs/input/sdl/keynames.c',
  'src/libs/input/sdl/vcontrol.c',
  'src/libs/list/list.c',
  'src/libs/log/msgbox_stub.c',
  'src/libs/log/uqmlog.c',
  'src/libs/math/random.c',
  'src/libs/math/random2.c',
  'src/libs/math/sqrt.c',
  'src/libs/md5/md5.c',
  'src/libs/memory/w_memlib.c',
  'src/libs/network/connect/connect.c',
  'src/libs/network/connect/listen.c',
  'src/libs/network/connect/resolve.c',
  'src/libs/network/netmanager/ndesc.c',
  'src/libs/network/netmanager/netmanager_bsd.c',
  'src/libs/network/netport.c',
  'src/libs/network/network_bsd.c',
  'src/libs/network/socket/socket.c',
  'src/libs/network/socket/socket_bsd.c',
  'src/libs/network/wspiapiwrap.c',
  'src/libs/resource/direct.c',
  'src/libs/resource/filecntl.c',
  'src/libs/resource/getres.c',
  'src/libs/resource/loadres.c',
  'src/libs/resource/propfile.c',
  'src/libs/resource/resinit.c',
  'src/libs/resource/stringbank.c',
  'src/libs/sound/audiocore.c',
  'src/libs/sound/decoders/aiffaud.c',
  'src/libs/sound/decoders/decoder.c',
  'src/libs/sound/decoders/dukaud.c',
  'src/libs/sound/decoders/modaud.c',
  'src/libs/sound/decoders/oggaud.c',
  'src/libs/sound/decoders/wav.c',
  'src/libs/sound/fileinst.c',
  'src/libs/sound/mixer/mixer.c',
  'src/libs/sound/mixer/nosound/audiodrv_nosound.c',
  'src/libs/sound/mixer/sdl/audiodrv_sdl.c',
  'src/libs/sound/music.c',
  'src/libs/sound/openal/audiodrv_openal.c',
  'src/libs/sound/resinst.c',
  'src/libs/sound/sfx.c',
  'src/libs/sound/sound.c',
  'src/libs/sound/stream.c',
  'src/libs/sound/trackplayer.c',
  'src/libs/strings/getstr.c',
  'src/libs/strings/sfileins.c',
  'src/libs/strings/sresins.c',
  'src/libs/strings/stringhashtable.c',
  'src/libs/strings/strings.c',
  'src/libs/strings/unicode.c',
  'src/libs/task/tasklib.c',
  'src/libs/threads/pthread/posixthreads.c',
  'src/libs/threads/sdl/sdlthreads.c',
  'src/libs/threads/thrcommon.c',
  'src/libs/time/sdl/sdltime.c',
  'src/libs/time/timecommon.c',
  'src/libs/uio/charhashtable.c',
  'src/libs/uio/debug.c',
  'src/libs/uio/defaultfs.c',
  'src/libs/uio/fileblock.c',
  'src/libs/uio/fstypes.c',
  'src/libs/uio/gphys.c',
  'src/libs/uio/hashtable.c',
  'src/libs/uio/io.c',
  'src/libs/uio/ioaux.c',
  'src/libs/uio/match.c',
  'src/libs/uio/mount.c',
  'src/libs/uio/mounttree.c',
  'src/libs/uio/paths.c',
  'src/libs/uio/physical.c',
  'src/libs/uio/stdio/stdio.c',
  'src/libs/uio/uiostream.c',
  'src/libs/uio/uioutils.c',
  'src/libs/uio/utils.c',
  'src/libs/uio/zip/zip.c',
  'src/libs/video/dukvid.c',
  'src/libs/video/legacyplayer.c',
  'src/libs/video/vfileins.c',
  'src/libs/video/video.c',
  'src/libs/video/videodec.c',
  'src/libs/video/vidplayer.c',
  'src/libs/video/vresins.c',
  'src/options.c',
  'src/port.c',
  'src/uqm/battle.c',
  'src/uqm/battlecontrols.c',
  'src/uqm/border.c',
  'src/uqm/build.c',
  'src/uqm/cleanup.c',
  'src/uqm/clock.c',
  'src/uqm/cnctdlg.c',
  'src/uqm/collide.c',
  'src/uqm/comm/arilou/arilouc.c',
  'src/uqm/comm/blackur/blackurc.c',
  'src/uqm/comm/chmmr/chmmrc.c',
  'src/uqm/comm/comandr/comandr.c',
  'src/uqm/comm/druuge/druugec.c',
  'src/uqm/comm/ilwrath/ilwrathc.c',
  'src/uqm/comm/melnorm/melnorm.c',
  'src/uqm/comm/mycon/myconc.c',
  'src/uqm/comm/orz/orzc.c',
  'src/uqm/comm/pkunk/pkunkc.c',
  'src/uqm/comm/rebel/rebel.c',
  'src/uqm/comm/shofixt/shofixt.c',
  'src/uqm/comm/slyhome/slyhome.c',
  'src/uqm/comm/slyland/slyland.c',
  'src/uqm/comm/spahome/spahome.c',
  'src/uqm/comm/spathi/spathic.c',
  'src/uqm/comm/starbas/starbas.c',
  'src/uqm/comm/supox/supoxc.c',
  'src/uqm/comm/syreen/syreenc.c',
  'src/uqm/comm/talkpet/talkpet.c',
  'src/uqm/comm/thradd/thraddc.c',
  'src/uqm/comm/umgah/umgahc.c',
  'src/uqm/comm/urquan/urquanc.c',
  'src/uqm/comm/utwig/utwigc.c',
  'src/uqm/comm/vux/vuxc.c',
  'src/uqm/comm/yehat/yehatc.c',
  'src/uqm/comm/zoqfot/zoqfotc.c',
  'src/uqm/comm.c',
  'src/uqm/commanim.c',
  'src/uqm/commglue.c',
  'src/uqm/confirm.c',
  'src/uqm/cons_res.c',
  'src/uqm/credits.c',
  'src/uqm/cyborg.c',
  'src/uqm/demo.c',
  'src/uqm/displist.c',
  'src/uqm/dummy.c',
  'src/uqm/encount.c',
  'src/uqm/flash.c',
  'src/uqm/fmv.c',
  'src/uqm/galaxy.c',
  'src/uqm/gameev.c',
  'src/uqm/gameinp.c',
  'src/uqm/gameopt.c',
  'src/uqm/gendef.c',
  'src/uqm/getchar.c',
  'src/uqm/globdata.c',
  'src/uqm/gravity.c',
  'src/uqm/grpinfo.c',
  'src/uqm/hyper.c',
  'src/uqm/init.c',
  'src/uqm/intel.c',
  'src/uqm/intro.c',
  'src/uqm/ipdisp.c',
  'src/uqm/load.c',
  'src/uqm/load_legacy.c',
  'src/uqm/loadship.c',
  'src/uqm/master.c',
  'src/uqm/menu.c',
  'src/uqm/misc.c',
  'src/uqm/oscill.c',
  'src/uqm/outfit.c',
  'src/uqm/pickship.c',
  'src/uqm/plandata.c',
  'src/uqm/planets/calc.c',
  'src/uqm/planets/cargo.c',
  'src/uqm/planets/devices.c',
  'src/uqm/planets/generate/genand.c',
  'src/uqm/planets/generate/genburv.c',
  'src/uqm/planets/generate/genchmmr.c',
  'src/uqm/planets/generate/gencol.c',
  'src/uqm/planets/generate/gendefault.c',
  'src/uqm/planets/generate/gendru.c',
  'src/uqm/planets/generate/genilw.c',
  'src/uqm/planets/generate/genmel.c',
  'src/uqm/planets/generate/genmyc.c',
  'src/uqm/planets/generate/genorz.c',
  'src/uqm/planets/generate/genpet.c',
  'src/uqm/planets/generate/genpku.c',
  'src/uqm/planets/generate/genrain.c',
  'src/uqm/planets/generate/gensam.c',
  'src/uqm/planets/generate/genshof.c',
  'src/uqm/planets/generate/gensly.c',
  'src/uqm/planets/generate/gensol.c',
  'src/uqm/planets/generate/genspa.c',
  'src/uqm/planets/generate/gensup.c',
  'src/uqm/planets/generate/gensyr.c',
  'src/uqm/planets/generate/genthrad.c',
  'src/uqm/planets/generate/gentrap.c',
  'src/uqm/planets/generate/genutw.c',
  'src/uqm/planets/generate/genvault.c',
  'src/uqm/planets/generate/genvux.c',
  'src/uqm/planets/generate/genwreck.c',
  'src/uqm/planets/generate/genyeh.c',
  'src/uqm/planets/generate/genzfpscout.c',
  'src/uqm/planets/generate/genzoq.c',
  'src/uqm/planets/gentopo.c',
  'src/uqm/planets/lander.c',
  'src/uqm/planets/orbits.c',
  'src/uqm/planets/oval.c',
  'src/uqm/planets/pl_stuff.c',
  'src/uqm/planets/planets.c',
  'src/uqm/planets/plangen.c',
  'src/uqm/planets/pstarmap.c',
  'src/uqm/planets/report.c',
  'src/uqm/planets/roster.c',
  'src/uqm/planets/scan.c',
  'src/uqm/planets/solarsys.c',
  'src/uqm/planets/surface.c',
  'src/uqm/process.c',
  'src/uqm/restart.c',
  'src/uqm/save.c',
  'src/uqm/settings.c',
  'src/uqm/setup.c',
  'src/uqm/setupmenu.c',
  'src/uqm/ship.c',
  'src/uqm/ships/androsyn/androsyn.c',
  'src/uqm/ships/arilou/arilou.c',
  'src/uqm/ships/blackurq/blackurq.c',
  'src/uqm/ships/chenjesu/chenjesu.c',
  'src/uqm/ships/chmmr/chmmr.c',
  'src/uqm/ships/druuge/druuge.c',
  'src/uqm/ships/human/human.c',
  'src/uqm/ships/ilwrath/ilwrath.c',
  'src/uqm/ships/lastbat/lastbat.c',
  'src/uqm/ships/melnorme/melnorme.c',
  'src/uqm/ships/mmrnmhrm/mmrnmhrm.c',
  'src/uqm/ships/mycon/mycon.c',
  'src/uqm/ships/orz/orz.c',
  'src/uqm/ships/pkunk/pkunk.c',
  'src/uqm/ships/probe/probe.c',
  'src/uqm/ships/shofixti/shofixti.c',
  'src/uqm/ships/sis_ship/sis_ship.c',
  'src/uqm/ships/slylandr/slylandr.c',
  'src/uqm/ships/spathi/spathi.c',
  'src/uqm/ships/supox/supox.c',
  'src/uqm/ships/syreen/syreen.c',
  'src/uqm/ships/thradd/thradd.c',
  'src/uqm/ships/umgah/umgah.c',
  'src/uqm/ships/urquan/urquan.c',
  'src/uqm/ships/utwig/utwig.c',
  'src/uqm/ships/vux/vux.c',
  'src/uqm/ships/yehat/yehat.c',
  'src/uqm/ships/zoqfot/zoqfot.c',
  'src/uqm/shipstat.c',
  'src/uqm/shipyard.c',
  'src/uqm/sis.c',
  'src/uqm/sounds.c',
  'src/uqm/starbase.c',
  'src/uqm/starcon.c',
  'src/uqm/starmap.c',
  'src/uqm/state.c',
  'src/uqm/status.c',
  'src/uqm/supermelee/buildpick.c',
  'src/uqm/supermelee/loadmele.c',
  'src/uqm/supermelee/melee.c',
  'src/uqm/supermelee/meleesetup.c',
  'src/uqm/supermelee/netplay/checkbuf.c',
  'src/uqm/supermelee/netplay/checksum.c',
  'src/uqm/supermelee/netplay/crc.c',
  'src/uqm/supermelee/netplay/netconnection.c',
  'src/uqm/supermelee/netplay/netinput.c',
  'src/uqm/supermelee/netplay/netmelee.c',
  'src/uqm/supermelee/netplay/netmisc.c',
  'src/uqm/supermelee/netplay/netoptions.c',
  'src/uqm/supermelee/netplay/netrcv.c',
  'src/uqm/supermelee/netplay/netsend.c',
  'src/uqm/supermelee/netplay/netstate.c',
  'src/uqm/supermelee/netplay/notify.c',
  'src/uqm/supermelee/netplay/notifyall.c',
  'src/uqm/supermelee/netplay/packet.c',
  'src/uqm/supermelee/netplay/packethandlers.c',
  'src/uqm/supermelee/netplay/packetq.c',
  'src/uqm/supermelee/netplay/packetsenders.c',
  'src/uqm/supermelee/netplay/proto/npconfirm.c',
  'src/uqm/supermelee/netplay/proto/ready.c',
  'src/uqm/supermelee/netplay/proto/reset.c',
  'src/uqm/supermelee/pickmele.c',
  'src/uqm/tactrans.c',
  'src/uqm/trans.c',
  'src/uqm/uqmdebug.c',
  'src/uqm/util.c',
  'src/uqm/velocity.c',
  'src/uqm/weapon.c',
  'src/uqm.c',
]

add_project_arguments([
    '-DTHREADLIB_SDL',
    '-DHAVE_JOYSTICK',
    '-DHAVE_ZIP=1',
    '-DUSE_PLATFORM_ACCEL',
    '-DTHREADLIB_SDL',
    '-DNETPLAY=FULL',
  ],
  language: 'c')

executable('uqm', sources,
  include_directories: [
    'src',
    'src/libs',
  ],
  dependencies: dependencies,
  install: true)

install_man('doc/users/uqm.6')
install_data('doc/users/manual.txt', install_dir: get_option('datadir')/'doc/uqm')
install_subdir('content', install_dir: get_option('datadir')/'uqm', strip_directory: true)
